<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:id="@+id/relativeLayout1"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@id/centerPoint"
            android:layout_toStartOf="@+id/centerPoint"
            android:textColor="@color/text_color_button_reset"
            android:minHeight="@dimen/button_size"
            android:minWidth="@dimen/button_size"
            android:onClick="resetScore"
            android:text="@string/reset" />

        <TextView
            android:id="@+id/centerPoint"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="" />

        <Button
            android:id="@+id/results_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/centerPoint"
            android:layout_toEndOf="@+id/centerPoint"
            android:textColor="@color/text_color_button_results"
            android:minHeight="@dimen/button_size"
            android:minWidth="@dimen/button_size"
            android:onClick="totalScoreTeam"
            android:text="@string/results" />

        <Button
            android:id="@+id/rules_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:minHeight="@dimen/button_size"
            android:minWidth="@dimen/button_size"
            android:onClick="scoringRules"
            android:text="@string/rules" />

        <TextView
            android:id="@+id/team_a_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="@dimen/dimen_10dp"
            android:paddingRight="@dimen/dimen_10dp"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_4dp"
            android:text="@string/team_a_name"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/team_a_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/team_a_name"
            android:layout_toEndOf="@+id/team_a_name"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="@dimen/dimen_8dp"
            android:paddingRight="@dimen/dimen_8dp"
            android:paddingStart="@dimen/dimen_8dp"
            android:paddingTop="@dimen/dimen_4dp"
            android:text="@string/score"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/team_a_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/team_a_text"
            android:layout_toEndOf="@+id/team_a_text"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="@dimen/dimen_4dp"
            android:text="@string/initial_value"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:id="@+id/layout_team_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dimen_24dp">

            <LinearLayout
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_8dp"
                    android:minHeight="@dimen/button_size"
                    android:minWidth="@dimen/button_size"
                    android:onClick="condorPointsA"
                    android:text="@string/condor"
                    android:textSize="@dimen/button_text_size" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_8dp"
                    android:minHeight="@dimen/button_size"
                    android:minWidth="@dimen/button_size"
                    android:onClick="doubleEaglePointsA"
                    android:text="@string/double_eagle"
                    android:textSize="@dimen/button_text_size" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_8dp"
                    android:minHeight="@dimen/button_size"
                    android:minWidth="@dimen/button_size"
                    android:onClick="eaglePointsA"
                    android:text="@string/eagle"
                    android:textSize="@dimen/button_text_size" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_8dp"
                    android:minHeight="@dimen/button_size"
                    android:minWidth="@dimen/button_size"
                    android:onClick="birdiePointsA"
                    android:text="@string/birdie"
                    android:textSize="@dimen/button_text_size" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_8dp"
                    android:minHeight="@dimen/button_size"
                    android:minWidth="@dimen/button_size"
                    android:onClick="bogeyPointsA"
                    android:text="@string/bogey"
                    android:textSize="@dimen/button_text_size" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_8dp"
                    android:minHeight="@dimen/button_size"
                    android:minWidth="@dimen/button_size"
                    android:onClick="doubleBogeyPointsA"
                    android:text="@string/double_bogey"
                    android:textSize="@dimen/button_text_size" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_8dp"
                    android:minHeight="@dimen/button_size"
                    android:minWidth="@dimen/button_size"
                    android:onClick="tripleBogeyPointsA"
                    android:text="@string/triple_bogey"
                    android:textSize="@dimen/button_text_size" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/dimen_2dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:background="@android:color/darker_gray">

            </View>

            <LinearLayout
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:contentDescription="@string/content_description"
                    android:id="@+id/team_a_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_8dp"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:src="@drawable/team_a" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/team_b_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_team_a"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="@dimen/dimen_220dp"
            android:paddingRight="@dimen/dimen_10dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:paddingStart="@dimen/dimen_220dp"
            android:paddingTop="@dimen/dimen_4dp"
            android:text="@string/team_b_name"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/team_b_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_team_a"
            android:layout_toRightOf="@+id/team_b_name"
            android:layout_toEndOf="@+id/team_b_name"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="@dimen/dimen_8dp"
            android:paddingRight="@dimen/dimen_8dp"
            android:paddingStart="@dimen/dimen_8dp"
            android:paddingTop="@dimen/dimen_4dp"
            android:text="@string/score"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/team_b_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_team_a"
            android:layout_toRightOf="@+id/team_b_text"
            android:layout_toEndOf="@+id/team_b_text"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="@dimen/dimen_4dp"
            android:text="@string/initial_value"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:id="@+id/layout_team_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_team_a"
            android:paddingBottom="@dimen/dimen_35dp"
            android:paddingTop="@dimen/dimen_24dp">

            <LinearLayout
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/team_b_avatar"
                    android:contentDescription="@string/content_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_8dp"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:src="@drawable/team_b" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/dimen_2dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:background="@android:color/darker_gray">

            </View>

            <LinearLayout
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_8dp"
                    android:minHeight="@dimen/button_size"
                    android:minWidth="@dimen/button_size"
                    android:onClick="condorPointsB"
                    android:text="@string/condor"
                    android:textSize="@dimen/button_text_size" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_8dp"
                    android:minHeight="@dimen/button_size"
                    android:minWidth="@dimen/button_size"
                    android:onClick="doubleEaglePointsB"
                    android:text="@string/double_eagle"
                    android:textSize="@dimen/button_text_size" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_8dp"
                    android:minHeight="@dimen/button_size"
                    android:minWidth="@dimen/button_size"
                    android:onClick="eaglePointsB"
                    android:text="@string/eagle"
                    android:textSize="@dimen/button_text_size" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_8dp"
                    android:minHeight="@dimen/button_size"
                    android:minWidth="@dimen/button_size"
                    android:onClick="birdiePointsB"
                    android:text="@string/birdie"
                    android:textSize="@dimen/button_text_size" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_8dp"
                    android:minHeight="@dimen/button_size"
                    android:minWidth="@dimen/button_size"
                    android:onClick="bogeyPointsB"
                    android:text="@string/bogey"
                    android:textSize="@dimen/button_text_size" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_8dp"
                    android:minHeight="@dimen/button_size"
                    android:minWidth="@dimen/button_size"
                    android:onClick="doubleBogeyPointsB"
                    android:text="@string/double_bogey"
                    android:textSize="@dimen/button_text_size" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_8dp"
                    android:minHeight="@dimen/button_size"
                    android:minWidth="@dimen/button_size"
                    android:onClick="tripleBogeyPointsB"
                    android:text="@string/triple_bogey"
                    android:textSize="@dimen/button_text_size" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>